remembered how to merge sort